Replaced e-mail address with contact us link.

--- a/Scott_Lake_History_Webpage.html
+++ b/Scott_Lake_History_Webpage.html
@@ -9,9 +9,8 @@
 <body>
   <h1>Scott Lake History</h1>
 
-  <p>Anyone is welcome to contact the web master Nathan Reitz to contribute more history
-  to this page. More history would be very much appreciated.<br />
-  <a href="mailto:Nathan.Reitz@scottlake.net">Nathan.Reitz@scottlake.net</a></p>
+  <p>Anyone is welcome to <a href="http://scottlake.net/contact-us/">contact us</a> to 
+    contribute more history to this page. More history would be very much appreciated.</p>
   <hr />
 
   <h3>Last Glacial Period &amp; The Formation of Scott Lake, 16,500 years ago</h3>
