Correcting info on golf course
Correcting info on golf course

--- a/index.html
+++ b/index.html
@@ -543,7 +543,12 @@
 
   <p>In 1964, Howard and Shirley Larson bought the land from the Scott Lake Development
   Company for $90,000. The official opening of the Scott Lake Golf Course was from April
-  30 &ndash; May 9, 1965. It began as an 18 hole golf course.</p>
+  30 &ndash; May 9, 1965. It began as an nine hole golf course. During the 1970s, it was
+  expanded and turned into an 18 hole golf course. Half of the 18 hole golf course was
+  only usable during the summer. During the rest of the year, it was too wet and muddy.
+  It was expensive to maintain. Because of this, it was later turned back into a nine
+  hole golf course.
+  </p>
 
   <p>In 1979, Derald and Margaret Martin bought the golf course from Howard and Shirley
   Larson.</p>
